[package]
name = "expression_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utf8-chars = "2.0.2"
pretty_assertions = "1.3.0"
readonly = "0.2.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
